fix pill overlap

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -188,8 +188,7 @@ figcaption {
   display:inline-block;
   align-items:center;
   padding:0.5em 1em;
-  margin-top: 0.2em;
-  margin-bottom: 0.2em;
+  margin-top: 0.1em;
 }
 
 .pill-button > span {
